# guv-calcs

./: .gitignore  .zenodo.json  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml  release.yml
scripts/: fix_zenodo_records.py  release.sh
src/guv_calcs/: __init__.py  _data.py  _read.py  _serialization.py  axis.py  calc_manager.py  calc_zone.py  calc_zone_io.py  calc_zone_plot.py  disinfection_calculator.py  efficacy.py  filter.py  filters.py  geometry.py  intensity_map.py  io.py  lamp.py  lamp_configs.py  lamp_helpers.py  lamp_orientation.py  lamp_placement.py  lamp_plotter.py  lamp_surface.py  lamp_surface_plotter.py  lamp_type.py  object.py  obstacles.py  ozone.py  performance.py  plane_calc_mode.py  plane_calc_type.py  poly_grid.py  polygon.py  project.py  rect_grid.py  reflectance.py  room.py  room_dims.py  room_plotter.py  safety.py  (+5 more)
src/guv_calcs/calc_zone/: __init__.py  _io.py  _plot.py  _zone.py
src/guv_calcs/calc_zones/: calc_zone_new_alt.py  geometry.py  rect_plane.py
src/guv_calcs/calc_zones_refactor/: axis.py  calc_zone_new.py  (+5 more)
tests/: __init__.py  conftest.py  test.py  test_calc_zone.py  test_e2e.py  test_efficacy.py  test_fixture.py  test_grid.py  test_io.py  test_lamp.py  test_lamp_coords.py  test_lamp_geometry.py  test_lamp_placement.py  test_object.py  test_occlusion.py  test_performance_estimates.py  test_project.py  test_read.py  test_reflectance.py  test_room.py  test_safety.py  test_safety_check.py  test_spectrum.py  test_standard_zones.py  test_units.py
(+46 files in other folders)
